[package]
name = "reqwest-bulkhead"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nnazo/reqwest-bulkhead"
documentation = "https://docs.rs/reqwest-bulkhead"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Bulkhead middleware implementation for reqwest-middleware
"""

[dependencies]
async-bulkhead = "0.1"
reqwest-middleware = "0.1"
reqwest = { version = "0.11", default-features = false }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1"
task-local-extensions = "0.1"
anyhow = "1"

